infrastructure/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axionyx-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "axionyx-cert"
spec:
  rules:
  - host: os.axionyx.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: engineering-os-kernel
            port:
              number: 80
